# Dotfiles

./: README.md  commands.lua  init.lua  lazy-lock.json  reload-lock.txt
.cache/clangd/index/: JSONFile.hpp.A79A6207E8812A8A.idx  JSONToken.cpp.DCC59D142A12D6ED.idx  JSONToken.hpp.E57DBA8E84742EF8.idx
DefaultFiles/: CMakeLists.txt
lua/: GitUtilities.lua  PluginManager.lua  nvim.lnk  plugin_manager.lua  utilities.lua
lua/Plugins/: AutoCompletion.lua  ColorScheme.lua  FuzzyFinder.lua  Lsp.lua  MarkdownPreviewer.lua  PackageManager.lua  RandomStuff.lua  StatusLine.lua  SyntaxHighlighting.lua  TabLine.lua
lua/Plugins/Appearance/: ColorScheme.lua  RandomStuff.lua  SyntaxHighlighting.lua
lua/Plugins/Lines/: CmdLine.lua  StatusLine.lua  TabLine.lua
lua/Plugins/Lsp/: AutoCompletion.lua  Lsp.lua
lua/Settings/: Builtin.lua  BuiltinSettings.lua  Keybinds.lua  Languages.lua  PluginSettings.lua  WVim.lua
lua/Utilities/: Config.lua  DefaultFiles.lua  Git.lua
lua/configs/: commands.lua  keymaps.lua  languages.lua  settings.lua
lua/plugins/: auto_completion.lua  autocompletion.lua  bar_line.lua  barline.lua  cmd_line.lua  cmdline.lua  color_scheme.lua  fuzzy_finder.lua  fuzzyfinder.lua  lsp.lua  package_manager.lua  packagemanager.lua  random_stuff.lua  status_line.lua  syntax_highlighting.lua  syntaxhighlighting.lua
nvim/: init.lua  lazy-lock.json  reload-lock.txt
nvim/lua/: plugin_manager.lua
nvim/lua/configs/: keymaps.lua  languages.lua
nvim/lua/plugins/: auto_completion.lua  bar_line.lua  cmd_line.lua  color_scheme.lua  fuzzy_finder.lua  lsp.lua  (+3 more)
